--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
 $sofia-font: 'Sofia', sans-serif;
 
+.container {}
+
 body {
     font-family: $sofia-font;
     font-weight: normal;
